--- a/Samples/Salesforce.Sample.RestExplorer/Common/RestExplorerResources.xaml
+++ b/Samples/Salesforce.Sample.RestExplorer/Common/RestExplorerResources.xaml
@@ -6,7 +6,7 @@
     <vms:RestActionViewModel x:Key="RestActionViewModel" />
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Foreground" Value="Green" />
+        <Setter Property="Foreground" Value="#54698d" />
     </Style>
 
 </ResourceDictionary>
