update the rest explore and smart sync sample apps to get reid of using native mainpage

--- a/Samples/Salesforce.Sample.SmartSyncExplorer/Pages/MainPage.xaml
+++ b/Samples/Salesforce.Sample.SmartSyncExplorer/Pages/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<native:NativeMainPage
+﻿<Page
     x:Class="Salesforce.Sample.SmartSyncExplorer.Shared.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -122,4 +122,4 @@
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
-</native:NativeMainPage>
+</Page>
