--- a/Samples/Salesforce.Sample.RestExplorer/Pages/MainPage.xaml
+++ b/Samples/Salesforce.Sample.RestExplorer/Pages/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<app:NativeMainPage
+﻿<Page
     x:Class="Salesforce.Sample.RestExplorer.Store.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -90,4 +90,4 @@
             <WebView Name="wbResult" Grid.Row="2" Grid.Column="0" Margin="0,1,1,1"/>
         </Grid>
     </Grid>
-</app:NativeMainPage>
+</Page>
